--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 body {
     margin: 0;
     padding-top: 800px;
+    text-align: center;
 }
 
 .profile {
     width: 175px;
     margin-bottom: 50px;
     border-radius: 50%;
+
 }
 
 #welcome {
@@ -23,6 +25,8 @@ body {
     display: table;
     width: 100%;
     height: 100%;
+    z-index: 9;
+    
 }
 
 
@@ -36,7 +40,7 @@ h1 {
 }
 
 #name {
-    font-size: 30px;
+    font-size: 50px;
     line-height: 1.2;
     font-family: 'Cinzel Decorative', cursive;
 
@@ -46,7 +50,7 @@ h2 {
     font-size: 30px;
     font-weight: 300;
     line-height: 1.2;
-    font-family: monospace
+    font-family: monospace;
 }
 
 #bio {
@@ -81,29 +85,42 @@ p {
 
 
 .menu {
-
-    list-style:none;
-    font-family: 'Anton', sans-serif;
+    list-style: none;
     position: fixed;
-    top: 30px;
+    top: 10px;
     right: 30px;
-    z-index: 1;
-    cursor:none;
+    cursor: pointer;
+    z-index: 10;
+    
 }
 
+
+
 .links {
-    float:left;
-    color: #fff;
+    float: left;
+    color: fuchsia;
     padding-top: 5px;
     padding-left: 9px;
     padding-right: 9px;
     padding-bottom: 5px;
-    font-family: 'Oswald', sans-serif;
-    font-size: 20px;
+    font-family: fantasy;
+    font-size: 20px
 }
-
-
 
 .links:hover {
-    background-color: dodgerblue;
+    background-color: aqua;
 }
+
+html {
+    scroll-behavior: smooth;
+}
+
+a {
+    text-decoration: none;
+}
+
+
+.article:hover {
+    color:fuchsia;
+}
+
